Lots of Sonar cleanup (#1016)
Closes #1011